[package]
name = "girs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numstat_parser = { path = "../numstat-parser" }
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
regex = "1.10.3"
polars = { version = "0.37.0", features = ["sql", "lazy", "rows", "is_in", "fmt", "describe", "serde", "strings"] }
rayon = "1.8.1"
log = "0.4.20"
serde_json = "1.0.113"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
tempfile = "3.9.0"
