[package]
name = "girs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numstat_parser = { path = "../numstat-parser" }
anyhow = "1.0.82"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
regex = "1.10.4"
polars = { version = "0.47.0", features = ["sql", "lazy", "rows", "is_in", "fmt", "describe", "serde", "strings"] }
rayon = "1.10.0"
log = "0.4.21"
serde_json = "1.0.116"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
