[package]
name = "numstat_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
rayon = "1.8.1"
regex = "1.10.2"
tempfile = "3.9.0"

[dev-dependencies]
assert_cmd = "2.0.13"
indoc = "2.0.4"
predicates = "3.1.0"
