[package]
name = "numstat_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
rayon = "1.10.0"
regex = "1.10.4"
tempfile = "3.10.1"

[dev-dependencies]
assert_cmd = "2.0.14"
indoc = "2.0.5"
predicates = "3.1.0"
